--- a/style.css
+++ b/style.css
@@ -62,6 +62,23 @@ img{
     max-width: var(--site-max-width);
 }
 
+.section-title{
+    text-align: center;
+    padding: 60px 0 100px;
+    text-transform: uppercase;
+    font-size: var(--font-size-xl);
+}
+
+.section-title::after{
+    content: "";
+    width: 80px; 
+    height: 5px;
+    display: block;
+    margin: 10px auto 0;
+    border-radius: var(--border-radius-s);
+    background: var(--secondary-color);
+}
+
 /* Navbar styling */
 header{
     position: fixed;
@@ -84,7 +101,7 @@ header .navbar{
 
 .navbar .nav-menu{
     display: flex;
-    gap: 10px;
+    gap: 10px; 
 }
 
 .navbar .nav-menu .nav-link{
@@ -101,9 +118,14 @@ header .navbar{
     background: var(--secondary-color);
 }
 
-.navbar :where(#menu-close-button, #menu-open-button){
+/* Hide the menu by default in full screen mode */
+/* .navbar :where(#menu-close-button, #menu-open-button){
+    display: none;
+} */
+#menu-close-button, #menu-open-button{
     display: none;
 }
+
 
 /* Hero section styling */
 .hero-section{
@@ -169,6 +191,139 @@ header .navbar{
     max-width: 500px;
     margin-right: 30px;
 }
+
+/* About section styling */
+.about-section{
+    padding: 120px 0;
+    background: var(--light-pink-color);
+}
+
+.about-section .section-content{
+    display: flex;
+    gap: 50px; 
+    align-items: center;
+    justify-content: space-between;   
+}
+
+.about-section .about-image-wrapper .about-image{
+    width: 400px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: var(--border-radius-circle);
+}
+
+.about-section .about-details{
+    max-width: 50%;
+}
+
+.about-section .about-details .text{
+    line-height: 30px;
+    margin: 50px 0 30px;
+    text-align: center;
+    font-size: var(--font-size-m); 
+}
+
+.about-section .about-details .social-link-list{
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+}
+
+.about-section .social-link-list .social-link{
+    color: var(--primary-color);
+    font-size: var(--font-size-l);
+    transition: 0.2 ease;
+}
+
+.about-section .social-link-list .social-link:hover{
+    color: var(--secondary-color);
+}
+
+/* Menu section styling */
+.menu-section{
+    color: var(--white-color);
+    background: var(--dark-color);
+    padding: 50px 0 100px;
+}
+
+.menu-section .menu-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 110px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu-section .menu-list .menu-item{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-between;
+    width: calc(100% / 3 - 110px);
+}
+
+.menu-section .menu-list .menu-item .menu-image{
+    max-width: 83%;
+    aspect-ratio: 1;
+    margin-bottom: 15px;
+    object-fit: contain;
+}
+
+.menu-section .menu-list .menu-item .name{
+    margin: 12px 0;
+    font-size: var(--font-size-l);
+    font-weight: var(--font-weight-semibold);
+}
+
+.menu-section .menu-list .menu-item .text{
+    font-size: var(--font-size-m);
+}
+
+/* Testimonials section styling */
+.testimonials-section{
+    padding: 50px 0 100px;
+    background: var(--light-pink-color);
+}
+
+.testimonials-section .testimonial{
+    display: flex;
+    padding: 35px;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.testimonials-section .testimonial .name{
+    margin: 16px;
+    font-size: var(--font-size-m);
+}
+
+.testimonials-section .testimonial .feedback{
+    line-height: 25px;
+}
+
+.testimonials-section .testimonial .user-image{
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    margin-bottom: 50px;
+    border-radius: var(--border-radius-circle);
+}
+
+
+/* Responsive query code for max width 1024px */
+@media screen and (max-width: 1024){
+    .menu-section .menu-list{
+        gap: 60px;
+    }
+
+    .menu-section .menu-list .menu-item{
+        width: calc(100% / 3 - 60px);
+    } 
+
+}
+
 /* Responsive query code for max width 900px */
 @media screen and (max-width: 900px){
     :root{
@@ -189,7 +344,11 @@ header .navbar{
         background: rgba(0,0,0,0.2);
     }
 
-    .navbar :where(#menu-close-button, #menu-open-button){
+    /* .navbar :where(#menu-close-button, #menu-open-button){
+        display: block;
+        font-size: var(--font-size-l);
+    } */
+    #menu-close-button, #menu-open-button{
         display: block;
         font-size: var(--font-size-l);
     }
@@ -207,7 +366,7 @@ header .navbar{
     .navbar .nav-menu{
         display: block;
         position: fixed;
-        left: -300;
+        left: -300px;
         top: 0;
         width: 300px;
         height: 100%;
@@ -229,4 +388,68 @@ header .navbar{
         margin-top: 17px;
         font-size: var(--font-size-l);
     }
+
+    .hero-section .section-content{
+        gap: 50px;
+        text-align: center;
+        padding: 30px 20px 20px;
+        flex-direction: column-reverse;
+        justify-content: center;
+
+    }
+
+    .hero-section .hero-details :is(.subtitle, .description), .about-section .about-details{
+        max-width: 100%;
+    }
+
+    .hero-section .hero-details .buttons{
+        justify-content: center;
+    }
+
+    .hero-section .hero-image-wrapper{
+        max-width: 100%;
+        margin-right: 0;
+    }
+
+    .about-section .section-content{
+        gap: 70px;
+        flex-direction: column;
+    }
+
+    .about-section .about-image-wrapper .about-image{
+        width: 100%;
+        height: 100%;
+        max-width: 250px;
+        aspect-ratio: 1;
+    }
+
+    .menu-section .menu-list{
+        gap: 30px;
+    }
+
+    .menu-section .menu-list .menu-item{
+        width: calc(100% / 2 - 60px);
+    } 
+
+    .menu-section .menu-list .menu-item .menu-image{
+        max-width: 200;
+    }    
+} 
+
+/* Responsive query code for max width 640px */
+@media screen and (max-width: 640px) {
+    .menu-section .menu-list{
+        gap: 60px;
+    }
+
+    .menu-section .menu-list .menu-item{
+        width: 100%
+    } 
+    
 }
+
+/* @media screen and (min-width: 901px) {
+    .navbar :where(#menu-close-button, #menu-open-button) {
+        display: none;
+    }
+} */
