--- a/style.css
+++ b/style.css
@@ -146,6 +146,7 @@ header .navbar{
     font-size: var(--font-size-xxl);
     color: var(--secondary-color);
     font-family: "Miniver", sans-serif;
+    margin-top: 60px;
 }
 
 .hero-section .hero-details .subtitle{
