--- a/style.css
+++ b/style.css
@@ -287,6 +287,11 @@ header .navbar{
     background: var(--light-pink-color);
 }
 
+.testimonials-section .slider-wrapper{
+    overflow: hidden;
+    margin: 0 60px 50px;
+}
+
 .testimonials-section .testimonial{
     display: flex;
     padding: 35px;
@@ -310,6 +315,23 @@ header .navbar{
     object-fit: cover;
     margin-bottom: 50px;
     border-radius: var(--border-radius-circle);
+}
+
+.testimonials-section .swiper-pagination-bullet{
+    width: 15px;
+    height: 15px;
+    opacity: 1;
+    background: var(--secondary-color);
+}
+
+.testimonials-section .swiper-slide-button{
+    margin-top: -50px;
+    color: var(--secondary-color);
+    transition: 0.3 ease;
+}
+
+.testimonials-section .swiper-slide-button:hover{
+    color: var(--primary-color);
 }
 
 
@@ -446,11 +468,12 @@ header .navbar{
     .menu-section .menu-list .menu-item{
         width: 100%
     } 
-    
-}
 
-/* @media screen and (min-width: 901px) {
-    .navbar :where(#menu-close-button, #menu-open-button) {
+    .testimonials-section .slider-wrapper{
+        margin: 0 0 30px;
+    }
+    
+    .testimonials-section .swiper-slide-button{
         display: none;
     }
-} */
+}
