--- a/style.css
+++ b/style.css
@@ -334,6 +334,33 @@ header .navbar{
     color: var(--primary-color);
 }
 
+/* Gallery section styling */
+.gallery-section{
+    padding: 50px 0 100px;
+}
+
+.gallery-section .gallery-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.gallery-section .gallery-list .gallery-item{
+    width: calc(100% / 3 - 32px);
+    border-radius: var(--border-radius-s);
+    overflow: hidden;
+}
+
+.gallery-section .gallery-list .gallery-image{
+    width: 100%;
+    height: 100%;
+    cursor: zoom-in;
+    transition: 0.3 ease;
+}
+
+.gallery-section .gallery-item:hover .gallery-image{
+    transform: scale(1.2);
+}
 
 /* Responsive query code for max width 1024px */
 @media screen and (max-width: 1024){
@@ -457,6 +484,15 @@ header .navbar{
     .menu-section .menu-list .menu-item .menu-image{
         max-width: 200;
     }    
+
+    .gallery-section .gallery-list {
+        gap: 30px;
+    }
+    
+    .gallery-section .gallery-list .gallery-item{
+        width: calc(100% / 2 - 30px);
+    }
+
 } 
 
 /* Responsive query code for max width 640px */
@@ -475,5 +511,9 @@ header .navbar{
     
     .testimonials-section .swiper-slide-button{
         display: none;
+    }
+
+    .gallery-section .gallery-list .gallery-item{
+        width: 100%
     }
 }
