--- a/style.css
+++ b/style.css
@@ -37,7 +37,11 @@
 
     /* Site max width */
     --site-max-width: 1300px;
-  }
+}
+
+html{
+    scroll-behavior: smooth;
+}
 
 /* style for whole site */
 ul{
@@ -233,7 +237,7 @@ header .navbar{
 .about-section .social-link-list .social-link{
     color: var(--primary-color);
     font-size: var(--font-size-l);
-    transition: 0.2 ease;
+    transition: 0.2s ease;
 }
 
 .about-section .social-link-list .social-link:hover{
@@ -293,6 +297,7 @@ header .navbar{
 }
 
 .testimonials-section .testimonial{
+    user-select: none;
     display: flex;
     padding: 35px;
     text-align: center;
@@ -327,7 +332,7 @@ header .navbar{
 .testimonials-section .swiper-slide-button{
     margin-top: -50px;
     color: var(--secondary-color);
-    transition: 0.3 ease;
+    transition: 0.3s ease;
 }
 
 .testimonials-section .swiper-slide-button:hover{
@@ -355,12 +360,43 @@ header .navbar{
     width: 100%;
     height: 100%;
     cursor: zoom-in;
-    transition: 0.3 ease;
+    transition: 0.3s ease;
 }
 
 .gallery-section .gallery-item:hover .gallery-image{
     transform: scale(1.2);
 }
+
+/* Footer-section styling */
+.footer-section{
+    background: var(--dark-color);
+    color: var(--white-color);
+}
+
+.footer-section .section-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-section :where(.copyright-text, .social-link){
+    color: var(--white-color);
+    transition: 0.2s ease;
+}
+
+.footer-section .social-link-list{
+    display: flex;
+    gap: 20px;
+}
+
+.footer-section .social-link-list .social-link{
+    font-size: var(--font-size-l);
+}
+
+.footer-section .social-link-list .social-link:hover{
+    color: var(--secondary-color);
+}
+
 
 /* Responsive query code for max width 1024px */
 @media screen and (max-width: 1024){
@@ -463,7 +499,7 @@ header .navbar{
 
     .about-section .section-content{
         gap: 70px;
-        flex-direction: column;
+        flex-direction: column-reverse;
     }
 
     .about-section .about-image-wrapper .about-image{
@@ -488,7 +524,7 @@ header .navbar{
     .gallery-section .gallery-list {
         gap: 30px;
     }
-    
+
     .gallery-section .gallery-list .gallery-item{
         width: calc(100% / 2 - 30px);
     }
